sourceitem: invoke method with correct context object

m_stream may get reset before the queued invocation happens.
contextualize the invocation to the stream rather than this (which does
potentially live longer than stream)

BUG: 501042
FIXED-IN: 6.3.3


(cherry picked from commit 4857109ab3af178222e53e65cfad20374afd28aa)

d908438e sourceitem: invoke method with correct context object

Co-authored-by: Harald Sitter <sitter@kde.org>